--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <title>Canvas Particles</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <style type="text/css">
+    #c{
+      background: rgb(19,0,28);
+      background: -moz-linear-gradient(top, rgba(19,0,28,1) 1%, rgba(79,79,79,1) 61%, rgba(170,154,73,1) 100%);
+      background: -webkit-linear-gradient(top, rgba(19,0,28,1) 1%,rgba(79,79,79,1) 61%,rgba(170,154,73,1) 100%);
+      background: linear-gradient(to bottom, rgba(19,0,28,1) 1%,rgba(79,79,79,1) 61%,rgba(170,154,73,1) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#13001c', endColorstr='#aa9a49',GradientType=0 );
+    }
+    </style>
 </head>
 <body>
     <canvas id="c" width="640" height="480">
